--- a/assets/style.css
+++ b/assets/style.css
@@ -5,10 +5,10 @@
 }
 
 nav {
-    background-color: blue;
-    height: 50px;
+    background-color: rgb(17, 73, 119);
+    height: 70px;
     color: white;
-    font-size: 2rem;
+    font-size: 2.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,12 +44,13 @@ form {
 }
 
 form button {
-    background-color: aqua;
+    background-color: rgb(0, 166, 255);
+    height: 40px;
     border-radius: 3px;
 }
 
 #buttons-container {
-    margin-top: 30px;
+    margin-top: 25px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -61,6 +62,7 @@ justify-content: space-between;
 }
 
 .card {
-    background-color: lightgreen;
-
+    background-color: rgb(144, 208, 238);
+    height: 125px;
+    width: 180px;
 }
