--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
@@ -70,3 +71,8 @@ justify-content: space-between;
     height: 125px;
     width: 180px;
 }
+
+/* img {
+    width: 100%;
+    height: 90px;
+} */
