--- a/assets/style.css
+++ b/assets/style.css
@@ -68,9 +68,18 @@ justify-content: space-between;
 
 .card {
     background-color: rgb(144, 208, 238);
-    height: 125px;
-    width: 180px;
+    height: 240px;
+    width: 210px;
+    padding-top: 0.3cm;
+    font-size: 15px;
+    line-height: 2.5;
+    
 }
+
+p {
+    margin-left: 0.3cm
+}
+
 
 
 
