--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,9 @@
 }
 
 nav {
-    background-color: rgb(17, 73, 119);
-    height: 70px;
+    /* background-color: rgb(17, 73, 119); */
+    background: linear-gradient(to right, #308abe, #030b61);
+    height: 65px;
     color: white;
     font-size: 2.5rem;
     display: flex;
@@ -55,7 +56,7 @@ form button {
 }
 
 #buttons-container {
-    margin-top: 25px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -79,13 +80,3 @@ justify-content: space-between;
 p {
     margin-left: 0.3cm
 }
-
-
-
-
-
-
-/* img {
-    width: 100%;
-    height: 90px;
-} */
