--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,10 @@ main div {
     text-align: center;
 }
 
+#search-input {
+    height: 40px;
+}
+
 #weather-area {
     width: 80%;
     padding: 15px;
