--- a/assets/style.css
+++ b/assets/style.css
@@ -73,12 +73,11 @@ justify-content: space-between;
 
 .card {
     background-color: rgb(144, 208, 238);
-    /* height: 240px; */
-    /* width: 210px; */
+    height: 240px;
+    width: 210px;
     padding-top: 0.3cm;
-    font-size: 13px;
+    font-size: 14px;
     line-height: 2.0;
-    
 }
 
 p {
